# bmi-calculator

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
src/: config.rs  lib.rs  main.rs
src/errors/: api.rs
src/handlers/: error_handler.rs  mod.rs
src/handlers/api/: bmi_handler.rs  mod.rs
src/models/: bmi.rs  generic.rs  mod.rs
src/routes/: bmi_route.rs  mod.rs
src/utils/: bmi.rs  mod.rs
tests/: integration_test_bmi.rs
