[package]
name = "bmi_calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.95"
config = "0.15.8"
env_logger = "0.11.6"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
derive_more = "0.99.19"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"
unused_variables = "warn"
unused_imports = "warn"

[lints.clippy]
enum_glob_use = "deny"
unwrap_used = "warn"

[package.metadata.clippy]
only_source = true
