[package]
name = "bmi_calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
validator = { version = "0.20.0", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
derive_more = { version = "2.0.1", features = ["full"] }
dotenv = "0.15.0"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"
unused_variables = "warn"
unused_imports = "warn"

[lints.clippy]
enum_glob_use = "deny"
unwrap_used = "warn"

[package.metadata.clippy]
only_source = true
